--- a/SecondApp/SecondApp/Base.lproj/Main.storyboard
+++ b/SecondApp/SecondApp/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,61 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SecondApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landscape" translatesAutoresizingMaskIntoConstraints="NO" id="HBR-sK-OcX">
+                                <rect key="frame" x="0.0" y="0.0" width="414.00000000000045" height="896"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R00-GG-1A7">
+                                <rect key="frame" x="0.0" y="627" width="414" height="269"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City by the Sea" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fME-4y-1cS">
+                                        <rect key="frame" x="20" y="20" width="374" height="25"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is such a beatiful place!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cxq-is-V97">
+                                        <rect key="frame" x="20" y="55" width="374" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Cxq-is-V97" secondAttribute="trailing" constant="20" id="4ze-k4-zlf"/>
+                                    <constraint firstItem="Cxq-is-V97" firstAttribute="leading" secondItem="R00-GG-1A7" secondAttribute="leading" constant="20" id="Jlu-cj-OyB"/>
+                                    <constraint firstItem="fME-4y-1cS" firstAttribute="top" secondItem="R00-GG-1A7" secondAttribute="top" constant="20" id="KPM-fB-R7t"/>
+                                    <constraint firstAttribute="trailing" secondItem="fME-4y-1cS" secondAttribute="trailing" constant="20" id="MYW-iC-fYD"/>
+                                    <constraint firstItem="fME-4y-1cS" firstAttribute="leading" secondItem="R00-GG-1A7" secondAttribute="leading" constant="20" id="hxW-Je-K6U"/>
+                                    <constraint firstItem="Cxq-is-V97" firstAttribute="top" secondItem="fME-4y-1cS" secondAttribute="bottom" constant="10" id="xEA-lQ-vqC"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.80493507922535212" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="HBR-sK-OcX" secondAttribute="trailing" id="6AP-Ai-QmQ"/>
+                            <constraint firstItem="HBR-sK-OcX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="DRR-oF-nHU"/>
+                            <constraint firstItem="R00-GG-1A7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IZ6-xM-Iuh"/>
+                            <constraint firstAttribute="bottom" secondItem="R00-GG-1A7" secondAttribute="bottom" id="KHP-Js-jQB"/>
+                            <constraint firstItem="HBR-sK-OcX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fnq-mH-N6P"/>
+                            <constraint firstAttribute="trailing" secondItem="R00-GG-1A7" secondAttribute="trailing" id="r94-6i-0dY"/>
+                            <constraint firstAttribute="bottom" secondItem="HBR-sK-OcX" secondAttribute="bottom" id="sfD-j6-8lT"/>
+                            <constraint firstItem="R00-GG-1A7" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="xIC-xT-QH0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="landscape" width="2005" height="1085"/>
+    </resources>
 </document>
